--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Typographix</title>
     <!-- favicon from local -->
      <link rel="icon" type="image/png/svg" href="/z.png">
+     
     <!-- fav icon from google-->
-     <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=zack.design.com"
-">
     <!-- font awesome v5 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="icon" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
- <i class="fab fa-watchman-monitoring"></i>
-<h1 class="test">Hello World</h1>
-<p>yeeees this is my first folder attached to Github</p>
-<i class="fa fa-address-card"></i>
+ 
+    <div class="container">
+            <h1>Typographix</h1>
+        <div class="brands"> 
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-github"></i>  
+        </div>
+
+            <h6>© 2023 Typographix Allrights reserved</h6>
+    </div>
 
 <!-- script -->
 <script src="script.js"></script>
+<script src="https://kit.fontawesome.com/409068a254.js" crossorigin="anonymous"></script>
 </body>
 </html>
